// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton Style tests should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-7:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-7:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

.circuit-2 {
  height: 24px;
  width: 24px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.circuit-0 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid #FFFFFF;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-4 {
  display: inline-block;
  opacity: 1;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition: opacity 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
}

<button
  class="circuit-6 circuit-7"
>
  <div
    class="circuit-2 circuit-3"
  >
    <div
      aria-busy="true"
      aria-live="assertive"
      class="circuit-0 circuit-1"
      role="alert"
    />
  </div>
  <span
    class="circuit-4 circuit-5"
  />
</button>
`;

exports[`LoadingButton Style tests should render with default styles after loading has finished 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-7:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-7:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

.circuit-2 {
  height: 24px;
  width: 24px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.circuit-0 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid #FFFFFF;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

.circuit-4 {
  display: inline-block;
  opacity: 1;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition: opacity 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
}

<button
  class="circuit-6 circuit-7"
>
  <div
    class="circuit-2 circuit-3"
  >
    <div
      aria-busy="true"
      aria-live="assertive"
      class="circuit-0 circuit-1"
      role="alert"
    />
  </div>
  <span
    class="circuit-4 circuit-5"
  />
</button>
`;

exports[`LoadingButton Style tests should render with loading styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  height: auto;
  cursor: pointer;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 5px;
  border-width: 1px;
  border-style: solid;
  background-color: #3388FF;
  border-color: #3388FF;
  color: #FFFFFF;
  padding: 8px calc(24px - 1px);
  position: relative;
  overflow: hidden;
}

.circuit-7:focus {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-7:hover {
  background-color: #1760CE;
  border-color: #1760CE;
}

.circuit-7:active {
  background-color: #003C8B;
  border-color: #003C8B;
}

.circuit-2 {
  height: 24px;
  width: 24px;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.circuit-0 {
  width: 24px;
  height: 24px;
  border-radius: 100%;
  border: 2px solid #FFFFFF;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
}

.circuit-4 {
  display: inline-block;
  opacity: 1;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition: opacity 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  opacity: 0;
  -webkit-transform: translate(0,100%);
  -ms-transform: translate(0,100%);
  transform: translate(0,100%);
}

<button
  class="circuit-6 circuit-7"
>
  <div
    class="circuit-2 circuit-3"
  >
    <div
      aria-busy="true"
      aria-live="assertive"
      class="circuit-0 circuit-1"
      role="alert"
    />
  </div>
  <span
    class="circuit-4 circuit-5"
  />
</button>
`;
